# Gesture_Recognition

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
GestureProj/rootfold/: model_lowres.keras  trainer.py
